# projet_recommandation_films

./: README.md  fonction_ml.py  main.py  ml_recommandation.py  model_recommandation  pyproject.toml  requirements.txt
.streamlit/: config.toml
db/: Features.csv  data_2.csv
functions/: movie_frame.py  test.py  utils.py
pages/: 1_Accueil.py  2_Fiche_Film.py  3_Presentation.py  3_Recommandation.py  3_Visus.py  4_Recommandation.py  5_Recherche.py  authentification.py  brouillon.py  fonction_ml.py  ml_recommandation.py  test.py  tests.py  visus.py
