[project]
name = "projet-recommandation-films"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googletrans>=4.0.2",
    "plotly-express>=0.4.1",
    "seaborn>=0.13.2",
    "st-clickable-images>=0.0.3",
    "streamlit>=1.51.0",
    "streamlit-authenticator>=0.4.2",
    "streamlit-option-menu>=0.4.0",
]
